# BSU

./: .gitignore  README.md
Android/Lab5Task4Java/: .gitignore  settings.gradle
Android/Lab5Task4Kotlin/: settings.gradle
Android/Lab6Task1/: settings.gradle
Android/lab5Task123/: settings.gradle
Android/labrabota10gruppa13-UzheNeKate/: README.md
Android/labrabota6gruppa13-UzheNeKate/: README.md
Android/labrabota7gruppa13-UzheNeKate/: README.md
Android/labrabota8gruppa13-UzheNeKate/: README.md
Android/labrabota9gruppa13-UzheNeKate/: README.md
Computer Graphics/: README.md
Databases/: lab2.sql  лаб1.docx  лаб3.docx  лаб4.docx  лаб5.docx  лаб6.docx
Functional Programming/: Delannoy.hs  Fibonacci.hs  Gcd.hs  Get2Numbers.hs  GetNumsLess.hs  delannoyPaths.hs  digits.hs  pow.hs  stack.hs  syracuseSequence.hs
Functional Programming/Class types and functors/: Date.hs  NumberSet.hs  Types.hs
Machine Learning/: kNN.ipynb  lab1.ipynb  lab2.ipynb
Mobile Security/lab1/: lab1.sln
Mobile Security/lab2/: lab2.sln
Numerical Analysis/: Lab1MV.ipynb  Lab2MV3course.ipynb
Operation Research/: ISO lab1.ipynb  ЛР1 Врублевская.docx
Parallel Systems/Lab1/: WSpTh3.sln
Parallel Systems/Lab3/: CMakeLists.txt  common.cpp  common.h  main.cpp  parallel_p2p_program.cpp  parallel_p2p_program.h  producer_consumer.cpp  producer_consumer.h  seq_program.cpp  seq_program.h  рипс_3.xlsx
Parallel Systems/Lab4/: Lab4.sln  Врублевская лр4.xlsx
Translation Methods/ЛР7/: emitter.c  global.h  lexer.c  main.c  parser.c  symbol.c  ЛР7.sln  ЛР7.vcxproj  ЛР7.vcxproj.filters
(+711 files in other folders)
